Fixes contact btn on mobile

--- a/stylesheets/contact.scss
+++ b/stylesheets/contact.scss
@@ -14,7 +14,7 @@
     @extend .btn-primary;
     @extend .btn-lg;
     text-align: center;
-    width: 50%;
+    min-width: 50%;
     max-width: 300px;
   }
 
